main header component

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -42,13 +42,13 @@
     background: linear-gradient(75deg, var(--color-secondary), transparent);
     border-radius: 50%;
     position: absolute;
-    filter: blur(15px)
+    transition: var(--transition);
 }
 
 .main-header-image {
     position: relative;
 }
 
-.main-header:hover .main-header-circle {
+.main-header-rigth:hover .main-header-circle {
     filter: blur(15px);
 }
