--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -52,3 +52,27 @@
 .main-header-rigth:hover .main-header-circle {
     filter: blur(15px);
 }
+
+/* ====== PROGRAMS ====== */
+.programs {
+    margin-top: 4rem;
+}
+
+.programs-wrapper {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 3rem;
+    margin-top: 4rem;
+}
+
+.programs-program a {
+    margin-top: 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.programs-program:hover a {
+    background: var(--color-secondary);
+    color: var(--color-gray-600)
+}
