--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -146,3 +146,69 @@
 .faq p {
     margin-top: 1.5rem
 }
+
+/* ====== TESTIMONIALS ====== */
+.testimonials {
+    width: 50rem;
+    margin-inline: auto;
+}
+
+.testimonials-head {
+    justify-content: center;
+}
+
+.card.testimonial {
+    position: relative;
+    text-align: left;
+    margin-top: 5rem
+}
+
+.testimonial-avatar {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 1.5rem;
+    border: 2px solid transparent;
+    overflow: hidden;
+    position: absolute;
+    top: -2rem;
+    left: calc(50% - 2rem);
+    box-shadow: 0 1.5rem 2rem rgba(26, 26, 54, 0.4);
+    transition: var(--transition);
+}
+
+.testimonial:hover .testimonial-avatar {
+    border-radius: 50%;
+    border-color: var(--color-gray-400);
+}
+
+.testimonial-quote {
+    font-style: italic;
+    margin: 1rem 0 2rem;
+}
+
+.card small.testimonial-title {
+    margin-top: 0.3rem;
+}
+
+.testimonials-btn-container {
+    width: fit-content;
+    margin: 2.5rem auto 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.testimonials-btn {
+    background: transparent;
+    cursor: pointer;
+}
+
+.testimonials-btn svg {
+    fill: var(--color-primary);
+    font-size: 1.8rem;
+    width: 3rem;
+    height: 3rem;
+}
+
+
