--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -211,4 +211,61 @@
     height: 3rem;
 }
 
+/* ====== FOOTER ====== */
+footer {
+    background: var(--color-primary);
+    margin-top: 7rem;
+    padding-top: 7rem;
+    font-size: 0.9rem;
+    color: var(--color-gray-100);
+}
 
+.footer-container {
+    display: grid;
+    grid-template-columns: 26rem 1fr 1fr 1fr;
+    gap: 6rem;
+}
+
+.footer-container article {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.7rem;
+}
+
+.footer-container article p {
+    margin-bottom: 0.6rem;
+    font-size: 1rem;
+}
+
+.footer-socials {
+    margin-top: 1.5rem;
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.footer-socials a {
+    background: var(--color-gray-100);
+    padding: 0.7rem;
+    border: 1px solid transparent;
+    border-radius: 0.6rem;
+    transition: var(--transition);
+}
+
+.footer-socials a svg {
+    color: var(--color-gray-600)
+}
+
+.footer-socials a:hover {
+    border-color: var(--color-gray-100);
+    background: transparent;
+}
+
+.footer-copyright {
+    color: var(--color-gray-100);
+    text-align: center;
+    padding: 1.5rem 0;
+    border-top: 2px solid var(--color-primary-variant);
+    margin-top: 5rem;
+}
