--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
     --primary-hue: 210;
     --gray-hue: 240;
     --color-primary: hsl(var(--primary-hue), 100%, 50%);
-    --color-primary-variant: hsl(var(var(--primary-hue). 100%, 60%));
+    --color-primary-variant: hsl(var(--primary-hue), 100%, 65%);
     --color-secondary: #ffb116;
     --color-gray-100: hsl(var(--gray-hue), 47%, 94%);
     --color-gray-200: hsl(var(--gray-hue), 26%, 75%);
