--- a/src/index.css
+++ b/src/index.css
@@ -154,6 +154,47 @@ section {
     font-weight: 300;
 }
 
+.header {
+    margin-top: 5rem;
+    height: 20rem;
+    overflow: hidden;
+    border-bottom: 2px solid var(--color-gray-400);
+}
+
+.header-container {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: grid;
+    place-items: center;
+    background: black;
+}
+
+.header-container-bg {
+    position: absolute;
+    width: 100%;
+}
+
+.header-container-bg img {
+    opacity: 0.5;
+}
+
+.header-content {
+    position: relative;
+    width: 44%;
+    margin: 0 auto;
+    text-align: center;
+    color: var(--color-gray-100)
+}
+
+.header-content h2 {
+    margin-bottom: 1rem;
+}
+
+.header-cotent p {
+    color: rgba(255, 255, 255, 0.7);
+}
+
 /* MEDIA QUERIES (medium screens */
 @media screen and (max-width: 1024px) {
     .container {
@@ -167,12 +208,33 @@ section {
     h2 {
         font-size: 1.6rem;
     }
+
+    .heeader-content {
+        width: 76%;
+    }
 }
 
-/* MEDIA QUERIES (medium screens) */
+/* MEDIA QUERIES (small screens) */
 @media screen and (max-width: 600px) {
     h1 {
         font-size: 2.2rem;
         line-height: 1.3; 
+    }
+
+    section {
+        margin-top: 7rem;
+    }
+
+    .header {
+        height: fit-content;
+    }
+
+    .header-content {
+        width: var(--container-width-md);
+        padding: 3rem 0;
+    }
+
+    .header-content p {
+        font-size: 0.85;
     }
 }
